--- a/RunForestRun/app/src/main/res/layout/activity_database.xml
+++ b/RunForestRun/app/src/main/res/layout/activity_database.xml
@@ -5,9 +5,8 @@
 
     <ListView
         android:id="@+id/lvTimes"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="0dp">
+        android:layout_height="wrap_content">
     </ListView>
 
 </LinearLayout>
