--- a/RunForestRun/app/src/main/res/layout/activity_maps.xml
+++ b/RunForestRun/app/src/main/res/layout/activity_maps.xml
@@ -13,7 +13,7 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="100dp"
+        android:layout_marginBottom="150dp"
         android:layout_alignParentTop="true"/>
 
     <TextView
@@ -22,8 +22,11 @@
         android:layout_height="wrap_content"
         android:text=""
         android:textSize="50dp"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"/>
+        android:layout_toLeftOf="@+id/mStartButton"
+        android:layout_toStartOf="@+id/mStartButton"
+        android:layout_below="@+id/mAddPOI" />
 
     <Button
         android:id="@+id/mStartButton"
@@ -41,6 +44,27 @@
         android:layout_height="50dp"
         android:layout_above="@id/mStartButton"
         android:layout_alignParentRight="true"
-        android:text="RESET ROUTE" />
+        android:layout_marginRight="0dp"
+        android:text="@string/bResetRoute" />
+
+    <Button
+        android:id="@+id/mDrawRoute"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="0dp"
+        android:layout_above="@+id/mResetRouteButton"
+        android:text="@string/bDrawRoute"/>
+
+    <Button
+        android:id="@+id/mAddPOI"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
+        android:text=""
+        android:layout_alignBaseline="@+id/mDrawRoute"
+        android:layout_alignBottom="@+id/mDrawRoute"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="0dp"/>
 
 </RelativeLayout>
