--- a/RunForestRun/app/src/main/res/layout/activity_main.xml
+++ b/RunForestRun/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+        <TextView
+            android:id="@+id/tvAppTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/app_name"
+            android:textSize="50sp"
+            android:textAlignment="center"/>
 
         <Button
             android:id="@+id/bMapActivity"
